--- a/.github/workdlows/cmake.yml
+++ b/.github/workdlows/cmake.yml
@@ -1,26 +1,19 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "dev/hw2"]
+  pull_request:  
+    branches: [ "main", "dev/hw2"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
@@ -33,10 +26,15 @@ jobs:
           cmake --build . 
           
       - name: Linters
-        run: |
-          cd ..
-          ./linters/run.sh
-
+        working-directory: ${{github.workspace}}
+        run: ./linters/run.sh
+      
+      - name: Upload our build dir
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-dir
+          path: build
+  
   test:
     
     needs: [build]
@@ -47,12 +45,22 @@ jobs:
       
       - uses: actions/checkout@v3
       
-      - name: Building
-        run: |
-          mkdir build
-          cd build
-          cmake ..
-          cmake --build . 
+#       - name: Building
+#         run: |
+#           mkdir build
+#           cd build
+#           cmake ..
+#           cmake --build . 
+      - name: Donwload build dir
+        uses: actions/download-artifact@v3
+        with:
+          name: build-dir
       
       - name: Testing
         run: ./project/tests/project_tests
+      - name: valgridn install
+        run: apt install valgrind
+        
+      - name: valgrind check
+        run: valgrind --tool=memcheck --leak-check=yes --error-exitcode=1 ./${PROJECT_NAME} 
+#         Project name указываем тот, что мы создаём
