--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -55,4 +55,4 @@ jobs:
       
     - name: Valgrind check
       working-directory: ${{github.workspace}}/build
-      run: valgrind --tool=memcheck --leak-check=yes --error-exitcode=1 ./valgrind_test    
+      run: valgrind --tool=memcheck --leak-check=yes --error-exitcode=1 ./ci_project   
