--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,42 +1,24 @@
-cmake_minimum_required(VERSION 3.15)
-
+cmake_minimum_required(VERSION 3.14)
 project(tests)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g")
-
-if(COVERAGE)      
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -coverage -lgcov" )
-endif()
-
-set(SOURCES "MySetTests.cpp")
-
-# GTEST
 include(FetchContent)
 FetchContent_Declare(
   googletest
   GIT_REPOSITORY https://github.com/google/googletest.git
   GIT_TAG release-1.12.1
 )
-# For Windows: Prevent overriding the parent project's compiler/linker settings
+
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(
-    ${PROJECT_NAME}
-    ${SOURCES}
-)
-
-target_include_directories(${PROJECT_NAME} PUBLIC ${MATRIX_LIB_INCLUDE_DIRS})
-
-target_link_libraries( 
-  ${PROJECT_NAME} 
-  ${MATRIX_LIB_LIBRARIES}
-  GTest::gtest_main
-)
+set(TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/MySetTests.cpp)
 
 include(GoogleTest)
+
+add_executable(${PROJECT_NAME} ${TEST_SOURCES})
+target_link_libraries(${PROJECT_NAME} ${STL_LIB} GTest::gtest_main)
+target_include_directories(${PROJECT_NAME} PUBLIC ${STL_INCLUDE_DIRS})
+
 gtest_discover_tests(${PROJECT_NAME})
