--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,15 +15,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Create dir
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-#       -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+    - name: Create directory
       run: mkdir ${{github.workspace}}/build
     - name: Create cmake
       working-directory: ${{github.workspace}}/build
       run: |
-        cmake .. -DTEST=1
+        cmake ..
         cmake --build .  
     - name: Build
       # Build your program with the given configuration
